\name{NEWS}

\title{NEWS file for the \pkg{model4you} package}

\section{Changes in Version 0.9-5}{
  \itemize{
    \item avoid using class()==, instead use is(), especially for matrix
  }
}


\section{Changes in Version 0.9-4}{
  \itemize{
    \item allow for custom coefficient tables in node_pmterminal()
    \item custom coefficient table for survreg models.
  }
}


\section{Changes in Version 0.9-2}{
  \itemize{
    \item allow plot to have no table
    \item improve viewport settings for plot
  }
}

\section{Changes in Version 0.9-1 (2018-02-02)}{
  \subsection{Bugfixes}{
  \itemize{
    \item{Fixed bug in test_heterogeneity(). Added tests for test_heterogeneity().}
    \item{Fixed bug in binomial_glm_plot().}
  }
  }
  \subsection{Other}{
  \itemize{
    \item{Added check if the model entered has a single factor covariate.}
  }
  }

}

