@@ -1,13 +1,13 @@
-4e4b2dbd55735fb402cf884976d37724 *DESCRIPTION
+68b377c9fd6daacfb140bf349c642d6b *DESCRIPTION
 ea7e2c45127c39ca20f781c34ed20627 *NAMESPACE
-c44031e6e3052f2a7009771ce04fea8b *R/helpers.R
+92ba4b4582192b6b99e2ae3d899acfa9 *R/helpers.R
 5450ab1cb902357459169f1bf51dd566 *R/objfun.R
-82fd36bbf567fdf5e7cd2383efc5ac36 *R/plot-pmtree.R
+39bda02c9583de5dc7b1fdfea534e877 *R/plot-pmtree.R
 3c7415d31ee41a0576828f865e8c5878 *R/pmforest.R
 0c5f8823818479b9647134c3c24485ac *R/pmodel-methods.R
 cd3e68b69ae2b682f0f2e3061e4d1d7f *R/pmodel-test.R
-b65ab54aa2d570506bd813531868e15d *R/pmodel.R
-9d1a7da42c3c5b4ba6f60711d40daef1 *R/pmtree-methods.R
+321263dce8c942cfe12b3eb93aa6030f *R/pmodel.R
+39c150844560d3a5282ef5ee9f1ad550 *R/pmtree-methods.R
 43c0b5d8cfbeb153b27a330454c3ad1f *R/pmtree.R
 cad5d4f9604bfbc1d731c353520a87f0 *R/varimp.R
 9c5d27ba5595ce8d867e7036f95ef33f *cleanup
@@ -18,7 +18,7 @@ b0628657bfd43a24adb4bfddac734937 *inst/JORS/man_model4you.Rnw
 1f2d8a4e1a62682db92398f1f84a373b *inst/JORS/pmworkflow.tex
 a3ab47f6dd9f7fb9801b490091947c65 *inst/JORS/ref_model4you.bib
 5f821820b70a4cce6f3d6f372c61da5a *inst/JORS/treefamily.tex
-7d23b66b50006062d384612fa1949a30 *inst/NEWS.Rd
+202f6973a0978e7ce70682f506004841 *inst/NEWS.Rd
 bd2a8ea8ee1b0284ba6221180c89e6af *inst/examples/ex-pmodel-test.R
 49a2d603cd1392d2acaadb3a06ece83e *inst/examples/ex-pmodel.R
 fe548097293d4b30a56033e1cf0016b2 *inst/examples/ex-pmodel_long.R
@@ -26,30 +26,30 @@ a293988502b3d5ac3f844385308994d6 *inst/examples/ex-pmtree-methods.R
 74f970c5d792a012164244e3869eacc5 *inst/examples/ex-pmtree.R
 4aeda223ff7031861701732ccd103eb1 *inst/reproducing_papers/2016_subgroup_analyses_ijb.Rmd
 be651d038e1e6d1925d7ac34d879c70d *inst/reproducing_papers/2017_individual_treatment_effect_als_smmr.Rmd
-cd7c99e1c8b646eff584ad6a1e210644 *man/binomial_glm_plot.Rd
+cdeb1c0560bee894a37f65a6c47a7549 *man/binomial_glm_plot.Rd
 05b54c3458220a9c40ae7c0ad894180d *man/coeftable.survreg.Rd
 645599e66df5c203023cc624139d520d *man/coxph_plot.Rd
 e7a03726cb82939251344a74c75d7fb0 *man/dot-add_modelinfo.Rd
 a1b9934e1cf99db9904e1e8587645cf8 *man/dot-modelfit.Rd
 a162594f86be748141310fac53d6ff84 *man/dot-prepare_args.Rd
-d6d04e6732c4b2dff042831e3b1961d9 *man/lm_plot.Rd
-5b77c140570fa92141008b87c6749daf *man/logLik.pmtree.Rd
-87eb447c0fecb7a54725d92b0cea8ce4 *man/node_pmterminal.Rd
-1513d8c9b99ee93a376901799ab5a8ae *man/objfun.Rd
+54afd565e1f5e4f479c3682577d896e9 *man/lm_plot.Rd
+73de0592247c950da425f8566876f80b *man/logLik.pmtree.Rd
+6ca77a4fd8d4ccc883467cf4b9bf5b37 *man/node_pmterminal.Rd
+efc138bc49f9637d94a976b0df4f8825 *man/objfun.Rd
 0352e45b5fac083adb2a8ae7e0706f63 *man/objfun.pmodel_identity.Rd
-034ace7d720bc96c3e83682ec80c6c91 *man/objfun.pmtree.Rd
+218d726a5fd8ac2fe693cf7c5c8ab196 *man/objfun.pmtree.Rd
 a2461e9a3afd019fdfb8b61c1fb43400 *man/one_factor.Rd
-00c8ffd0f321c97f1793581e2909cdfe *man/pmforest.Rd
-8f3e4b54e81a0ad0dc5ff1a37a70564d *man/pmodel.Rd
+3f736ee8cf0af50473ee27e833252ab7 *man/pmforest.Rd
+d20f8b3bf5e3368b287992c8bfdaa227 *man/pmodel.Rd
 47f8c2ff6df4feace9badf4c8e425f6f *man/pmtest.Rd
-e62c08e1baa74dd80a04674db3a471ed *man/pmtree.Rd
-6f483e2c7f062f9b8f433eedb296c4f1 *man/predict.pmtree.Rd
-c512ef29d00a7c1efcbcd322699b1532 *man/print.pmtree.Rd
+455e20d72e2129b89e05e36a3639b201 *man/pmtree.Rd
+3de7c562c9e35f27bb6473db7e1bfa77 *man/predict.pmtree.Rd
+1c8a682339a86dd57719f04704b641b9 *man/print.pmtree.Rd
 95c881379492b88deae0288a9e651c4b *man/rss.Rd
-d5213582253e2edc4a6b506ad50eb6be *man/survreg_plot.Rd
-8d63b23c5f0545627b54b47d6bdaae4c *man/varimp.pmforest.Rd
+49211b1e60940ad682cf0ab8e7aecfb0 *man/survreg_plot.Rd
+0b8fd93754ae4b41d3ad3fdcbb413f5e *man/varimp.pmforest.Rd
 9bf56da8b7fe58a0ca8ede2225f93b78 *tests/test-pmodel-test.R
 60dc3d6ff444aa25f23163b127f53452 *tests/test-pmodel.R
 7299aab4f9c27e0c382abebc5f5bb497 *tests/test-pmodel.Rout.save
-61c6068b3af2845ff01b4c242f0be0ef *tests/test-pmtree.R
-5ac49945e9ef92c338fecfc5decdd5a7 *tests/test-pmtree.Rout.save
+a577dc52742e209d8b7e544ee072e08f *tests/test-pmtree.R
+d84523000323ed5461376e713fa4633f *tests/test-pmtree.Rout.save
