@@ -4,9 +4,15 @@
 \alias{node_pmterminal}
 \title{Panel-Generator for Visualization of pmtrees}
 \usage{
-node_pmterminal(obj, coeftable = TRUE, digits = 2, confint = TRUE,
-  plotfun, nid = function(node) paste0(nam[id_node(node)], ", n = ",
-  node$info$nobs), ...)
+node_pmterminal(
+  obj,
+  coeftable = TRUE,
+  digits = 2,
+  confint = TRUE,
+  plotfun,
+  nid = function(node) paste0(nam[id_node(node)], ", n = ", node$info$nobs),
+  ...
+)
 }
 \arguments{
 \item{obj}{an object of class party.}
